# sso_gen

./: .bump2version.cfg  .env.example  .flake8  .gitignore  .isort.cfg  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  TODO.md  acct_map.example.json  mypy.ini  pylintrc  pyproject.toml  pytest.ini  ssogen.py
sso_gen/: __init__.py  aws_profile.py  config.py  custom_exceptions.py  sso.py  utils.py
tests/: test_ssocreds.py
