[tool.poetry]
name = "sso-creds"
version = "0.1.0"
authors = ["me"]
description = "SSO credential generation"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.22"
python-decouple = "^3.6"



[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pylint = "^2.9.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"
autopep8 = "^1.5.7"
bpython = "^0.21"
safety = "^1.10.3"
moto = "^2.1.0"
isort = "^5.9.2"
pyinstaller = "^4.5.1"
ufmt = "^1.3.3"

[tool.poetry.scripts]
sso_gen = "sso_gen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
