[tool.poetry]
name = "sso-creds"
version = "0.1.0"
authors = ["me"]
description = "SSO credential generation"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.24.22"
python-decouple = "^3.6"



[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pylint = "^2.9.3"
bandit = "^1.7.0"
isort = "^5.9.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
autopep8 = "^2.0.0"
bpython = "^0.23"
safety = "^2.3.1"
moto = "^4.0.9"
pyinstaller = "^5.6.2"
black = "^22.10.0"

[tool.poetry.scripts]
sso_stuff = "sso_gen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
