[tool.poetry]
name = "sso-creds"
version = "0.1.0"
authors = ["me"]
description = "SSO credential generation"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.26.80"
python-decouple = "^3.7"



[tool.poetry.scripts]
sso_stuff = "sso_gen:main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
isort = "^5.12.0"
bandit = "^1.7.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
bump2version = "^1.0.1"
bpython = "^0.24"
moto = "^4.1.3"
pyinstaller = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
